# turbulence

./: .dockerignore  .env.example  .gitignore  CHANGES_COMPLETE.md  CHART_FEATURES.md  CLAUDE.md  DATABASE_README.md  Dockerfile  FIX_SUMMARY.md  HYSTERESIS_FIX_SUMMARY.md  HYSTERESIS_GUIDE.md  MIGRATION_SUMMARY.md  QUICKREF.md  README.md  TIER_GUIDE.md  TURBULENCE.md  migrate_tables.py  plot_turbulence.py  pyproject.toml  requirements.txt  test_database_setup.py  test_full_data_fetch.py  test_lookback_fix.py  test_simple_thresholds.py
docs/: METHODOLOGY_REVIEW.md  QUICKREF.md  TURBULENCE.md  USAGE.md
scripts/: generate_chart.sh
src/turbulence/: __init__.py  backtest.py  cli.py  cli_analysis.py  cli_compute.py  composite.py  config.py  data_fetcher.py  database.py  plotting.py  report.py  storage.py  tier1.py  tier2.py  tier3.py  utils.py
src/turbulence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_backtest.py  test_composite.py  test_lookback_fix.py  test_report.py  test_simple_thresholds.py  test_storage.py  test_tier1.py  test_tier2.py  test_tier3.py
