[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "turbulence"
version = "0.1.0"
description = "Financial market turbulence detection system"
readme = "TURBULENCE.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "hmmlearn",
    "statsmodels",
    "arch",
    "scikit-learn",
    "fredapi",
    "click",
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
turbulence = "turbulence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
