[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "turbulence"
version = "0.1.0"
description = "Financial market turbulence detection system using HMM, GARCH, and multi-asset turbulence indices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Wiktor Lukasik"},
]
keywords = ["finance", "volatility", "regime-detection", "hmm", "garch", "turbulence", "vix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "hmmlearn",
    "statsmodels",
    "arch",
    "scikit-learn",
    "fredapi",
    "click",
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
plot = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/wiktorjl/turbulence"
Repository = "https://github.com/wiktorjl/turbulence"
Issues = "https://github.com/wiktorjl/turbulence/issues"

[project.scripts]
turbulence = "turbulence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
